<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fire"
            android:icon="@drawable/fire"
            android:title="@string/fire" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/friends"
            android:title="@string/Contacts" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/disconnect"
            android:icon="@drawable/disconnect"
            android:title="@string/disconnect" />
    </group>
</menu>