<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/identify_your_self"
        style="@style/TextHeadLineStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identify_your_self"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:hint="@string/email"

        app:errorContentDescription="@string/wrong_email"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/identify_your_self">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorContentDescription="@string/empty_password"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgotPassword"
        style="@style/MyTextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_view_margin"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/createAccountText"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/createAccountText"
        style="@style/MyTextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintBottom_toTopOf="@id/orText"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@id/facebookSignIn"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/createAccountText"
        app:textAllCaps="true" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/facebookSignIn"
        style="@style/MyTextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/facebook"
        android:text="@string/facebook_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/orText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/orText" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/view_margin_start" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/view_margin_start" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/view_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/orText"
        app:layout_constraintEnd_toStartOf="@id/orText"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/orText" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/view_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/orText"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/orText"
        app:layout_constraintTop_toTopOf="@id/orText" />

</androidx.constraintlayout.widget.ConstraintLayout>