<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createDirection"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:drawableEnd="@drawable/direction"
        android:text="@string/create_direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="true" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/readPosts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:drawableEnd="@drawable/post"
        android:text="@string/read_posts"
        app:layout_constraintEnd_toEndOf="@id/createDirection"
        app:layout_constraintStart_toStartOf="@id/createDirection"
        app:layout_constraintTop_toBottomOf="@id/createDirection"
        app:textAllCaps="true" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        style="@style/MyButtonTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/readPosts"
        app:textAllCaps="true" />

</androidx.constraintlayout.widget.ConstraintLayout>