<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <!--        android:id="@+id/backButton"-->
    <!--        android:layout_width="@dimen/medium_icon"-->
    <!--        android:layout_height="@dimen/medium_icon"-->
    <!--        android:layout_margin="@dimen/view_margin"-->
    <!--        android:src="@drawable/back_arrow"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:tint="@color/secondaryColor" />-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/backButton"
        style="@style/MyTextBackButtonStyle"
        android:layout_width="@dimen/medium_icon"
        android:layout_height="@dimen/medium_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/TextHeadLineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fire_address"
        style="@style/TextImportantStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:lines="2"
        android:text="Fire address:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:textAllCaps="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:text="@string/content"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fire_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:hint="@string/content_hint"
        android:maxHeight="256dp"
        android:minHeight="84dp"
        app:errorContentDescription="@string/empty_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:lines="3"
            android:textAlignment="viewStart" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fire_image"
        android:layout_width="match_parent"

        android:layout_height="@dimen/large_picture"
        android:layout_margin="@dimen/view_margin"
        android:foreground="@drawable/border_picture_foreground"
        android:scaleType="center"
        android:src="@drawable/capture_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_post"
        style="@style/MyBigButtonStyle"
        android:text="@string/create_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:text="@string/on_save"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/progressBar" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/progressText" />


</androidx.constraintlayout.widget.ConstraintLayout>